# feuerwehr_zeitmessung

./: CMakeLists.txt
android/: AndroidManifest.xml
qml/: Counter.qml  DeviceList.qml  ErrorList.qml  History.qml  Main.qml
src/: BleHandler.cpp  BleHandler.h  BluetoothHandlercpp  main.cpp
